--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>My self ismail</h1>
     <h1>My First project included in GitHub</h1>
-    <a href="p1.jpg">added picture</a>
+    <img src="p1.jpg" alt="natural picture">
 </body>
 </html>
